--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 appdirs==1.4.0
 awsebcli==3.9.1
 blessed==1.14.1
+boto==2.46.1
 botocore==1.5.14
 cement==2.8.2
 colorama==0.3.7
 Django==1.10.5
+django-storages==1.5.2
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
