--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,21 @@ boto==2.46.1
 botocore==1.5.14
 cement==2.8.2
 colorama==0.3.7
+coreapi==2.2.4
+coreschema==0.0.4
 Django==1.10.5
+django-rest-swagger==2.1.1
 django-storages==1.5.2
+djangorestframework==3.5.4
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.13.1
+itypes==1.1.0
+Jinja2==2.9.5
 jmespath==0.9.1
+MarkupSafe==0.23
+openapi-codec==1.3.1
 packaging==16.8
 pathspec==0.5.0
 pyparsing==2.1.10
@@ -19,7 +27,9 @@ python-dateutil==2.6.0
 PyYAML==3.12
 requests==2.9.1
 semantic-version==2.5.0
+simplejson==3.10.0
 six==1.10.0
 tabulate==0.7.5
+uritemplate==3.0.0
 wcwidth==0.1.7
 websocket-client==0.40.0
