--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.3.7
 coreapi==2.2.4
 coreschema==0.0.4
 Django==1.10.5
+django-filter==1.0.1
 django-rest-swagger==2.1.1
 django-storages==1.5.2
 djangorestframework==3.5.4
@@ -18,6 +19,7 @@ docutils==0.13.1
 itypes==1.1.0
 Jinja2==2.9.5
 jmespath==0.9.1
+Markdown==2.6.8
 MarkupSafe==0.23
 openapi-codec==1.3.1
 packaging==16.8
