--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ MarkupSafe==0.23
 openapi-codec==1.3.1
 packaging==16.8
 pathspec==0.5.0
+psycopg2==2.7
 pyparsing==2.1.10
 python-dateutil==2.6.0
 PyYAML==3.12
